# zmk-dynamic-macros

./: CHANGELOG.md  CMakeLists.txt  CONTEXT.md  Kconfig  LICENSE  README.md
.github/workflows/: firmware-size.yml  host-tests.yml  release.yml  test-main.yml  test-release.yml  test.yml  track-zmk.yml  unit-tests.yml  upgrade-zmk.yml
docs/: architecture-redesign.md  arrow-cheatsheet.md  event-api.md  keycodes.md  robustness-review.md  versioning-and-ci.md
docs/adr/: 0001-deep-module-architecture.md  0002-single-instance-internals.md
docs/agents/: step-7-handoff.md
docs/plans/: arena-slot-storage.md  cutover.md
docs/reviews/: architecture-redesign-review.md
dts/behaviors/: dynamic_macro.dtsi
dts/bindings/behaviors/: zmk,behavior-dynamic-macro.yaml
include/: dm_internal.h
include/dt-bindings/zmk/: dynamic_macros.h
include/zmk-behavior-dynamic-macros/: dm_config.h  dm_event.h  dm_feedback.h  dm_feedback_build.h  dm_feedback_pump.h  dm_feedback_pump_priv.h  dm_internal.h  dm_kconfig.h  dm_machine.h  dm_notify.h  dm_nvs.h  dm_query.h  dm_render.h  dm_result.h  dm_shell.h  dm_spec.h  slot_store.h  slot_store_priv.h
include/zmk-behavior-dynamic-macros/events/: dynamic_macro_state_changed.h
include/zmk-behaviour-dynamic-macros/: dm_feedback.h  dm_internal.h
include/zmk-dynamic-macros/: dm_internal.h
include/zmk/events/: dynamic_macro_state_changed.h
src/: behavior_dynamic_macro.c  dm_events.c  dm_feedback.c  dm_feedback_build.c  dm_feedback_pump.c  dm_machine.c  dm_nvs.c  dm_query.c  dm_render.c  dm_storage.c  slot_store.c  slot_store_priv.h
src/behaviors/: behavior_dynamic_macro.c  behavior_dynamic_macro_v2.c
src/events/: dynamic_macro_state_changed.c
tests/: README.md  behavior_keymap.dtsi
tests/core/: behavior_keymap.dtsi
tests/core/assign_cancel/: native_sim.keymap
tests/core/assign_occupied/: native_sim.keymap
tests/core/chain_no_room/: keycode_events.snapshot  native_sim.conf  native_sim.keymap
tests/core/delete_cancel/: native_sim.conf  native_sim.keymap
tests/core/delete_empty/: native_sim.keymap
tests/core/delete_reuse/: native_sim.keymap
tests/core/load_e2e/: keycode_events.snapshot  native_sim.conf  native_sim.keymap
tests/core/mod_morph_record/: keycode_events.snapshot  native_sim.keymap
tests/core/mod_tap_record/: keycode_events.snapshot  native_sim.keymap
tests/core/modifier_chords/: keycode_events.snapshot  native_sim.keymap
tests/core/modifier_record/: keycode_events.snapshot  native_sim.keymap
tests/core/move_cancel/: native_sim.conf  native_sim.keymap
tests/core/move_last_empty/: native_sim.conf  native_sim.keymap
tests/core/move_occupied/: native_sim.keymap
tests/core/multi_slot_nvs/: keycode_events.snapshot  native_sim.conf  native_sim.keymap
tests/core/nvs_delete_reload/: native_sim.conf  native_sim.keymap
tests/dynamic_macro/: behavior_keymap.dtsi
tests/parity/: render_corpus.h
tests/parity/e2e/: generate.sh
tests/parity/render/: CMakeLists.txt  app.overlay  behavior_keymap.dtsi  capture_test.c  golden_us.h  keycode_events.snapshot  native_sim.conf  native_sim.keymap  prj.conf  testcase.yaml
tests/record_play/: native_sim.keymap
tests/size/: README.md  auto_erase.conf  baseline.conf  default.conf  feedback_nopersist.conf  full.conf  minimal.conf  persist_nofeedback.conf  west.yml
tests/unit/: .gitignore  CMakeLists.txt  Makefile  README.md  host_runner.c  prj.conf  test_feedback_build.c  test_machine.c  test_query.c  test_render.c  test_render_parity.c  test_sanity.c  test_slot_store.c  testcase.yaml  ztest_shim.h
zephyr/: module.yml
(+115 files in other folders)
